--- a/imgui.ini
+++ b/imgui.ini
@@ -16,20 +16,20 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Debug]
-Pos=1381,440
-Size=496,378
+Pos=1254,383
+Size=496,374
 Collapsed=0
 DockId=0x00000009,2
 
 [Window][SpotLight]
-Pos=1381,174
-Size=496,264
+Pos=1254,120
+Size=496,261
 Collapsed=0
 DockId=0x00000008,2
 
 [Window][Collision Debug]
-Pos=1381,440
-Size=496,378
+Pos=1254,383
+Size=496,374
 Collapsed=0
 DockId=0x00000009,1
 
@@ -39,20 +39,20 @@ Size=550,680
 Collapsed=0
 
 [Window][Camera Option]
-Pos=1381,440
-Size=496,378
+Pos=1254,383
+Size=496,374
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][PointLight]
-Pos=1381,174
-Size=496,264
+Pos=1254,120
+Size=496,261
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][DirectionalLight]
-Pos=1381,174
-Size=496,264
+Pos=1254,120
+Size=496,261
 Collapsed=0
 DockId=0x00000008,0
 
@@ -61,11 +61,17 @@ Pos=-109,412
 Size=514,263
 Collapsed=0
 
+[Window][Fog]
+Pos=1254,120
+Size=496,261
+Collapsed=0
+DockId=0x00000008,3
+
 [Docking][Data]
 DockNode    ID=0x00000001 Pos=604,281 Size=418,284 Split=X
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=181,253 Selected=0x3FC1CF52
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=235,253 Selected=0x44A6A033
-DockNode    ID=0x00000005 Pos=1381,174 Size=496,644 Split=Y
-  DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=595,264 Selected=0x5A94F141
+DockNode    ID=0x00000005 Pos=1254,120 Size=496,637 Split=Y
+  DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=595,264 Selected=0xC08551AB
   DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=595,378 Selected=0xD793C64C
 
