出力ファイルと中間ファイルをソリューションファイルより一つ上に階層にした

--- a/External/ImGUI/ImGui.vcxproj
+++ b/External/ImGUI/ImGui.vcxproj
@@ -78,13 +78,13 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>$(SolutionDir)Generated/Outputs/$(ProjectName)/$(Configuration)/</OutDir>
-    <IntDir>$(SolutionDir)/Generated/Obj/$(ProjectName)/$(Configuration)/</IntDir>
+    <OutDir>$(SolutionDir)../Generated/Outputs/$(ProjectName)/$(Configuration)/</OutDir>
+    <IntDir>$(SolutionDir)../Generated/Obj/$(ProjectName)/$(Configuration)/</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(SolutionDir)Generated/Outputs/$(ProjectName)/$(Configuration)/</OutDir>
-    <IntDir>$(SolutionDir)/Generated/Obj/$(ProjectName)/$(Configuration)/</IntDir>
+    <OutDir>$(SolutionDir)../Generated/Outputs/$(ProjectName)/$(Configuration)/</OutDir>
+    <IntDir>$(SolutionDir)../Generated/Obj/$(ProjectName)/$(Configuration)/</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
