--- a/NewEngine.vcxproj
+++ b/NewEngine.vcxproj
@@ -80,14 +80,14 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>$(SolutionDir)External/ImGUI;$(SolutionDir)External/DirectXTex</IncludePath>
-    <IntDir>$(SolutionDir)Generated/Obj/$(ProjectName)/$(Configuration)/</IntDir>
-    <OutDir>$(SolutionDir)Generated/Outputs/$(ProjectName)/$(Configuration)/</OutDir>
+    <IntDir>$(SolutionDir)../Generated/Obj/$(ProjectName)/$(Configuration)/</IntDir>
+    <OutDir>$(SolutionDir)../Generated/Outputs/$(ProjectName)/$(Configuration)/</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>$(SolutionDir)External/ImGUI;$(SolutionDir)External/DirectXTex</IncludePath>
-    <IntDir>$(SolutionDir)Generated/Obj/$(ProjectName)/$(Configuration)/</IntDir>
-    <OutDir>$(SolutionDir)Generated/Outputs/$(ProjectName)/$(Configuration)/</OutDir>
+    <IntDir>$(SolutionDir)../Generated/Obj/$(ProjectName)/$(Configuration)/</IntDir>
+    <OutDir>$(SolutionDir)../Generated/Outputs/$(ProjectName)/$(Configuration)/</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
