--- a/imgui.ini
+++ b/imgui.ini
@@ -16,22 +16,22 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Debug]
-Pos=1254,383
-Size=496,374
+Pos=170,316
+Size=496,370
 Collapsed=0
-DockId=0x00000009,2
+DockId=0x0000000B,2
 
 [Window][SpotLight]
-Pos=1254,120
-Size=496,261
+Pos=1360,30
+Size=432,180
 Collapsed=0
-DockId=0x00000008,2
+DockId=0x00000007,2
 
 [Window][Collision Debug]
-Pos=1254,383
-Size=496,374
+Pos=1371,498
+Size=419,389
 Collapsed=0
-DockId=0x00000009,1
+DockId=0x0000000B,0
 
 [Window][Dear ImGui Demo]
 Pos=624,3
@@ -39,22 +39,22 @@ Size=550,680
 Collapsed=0
 
 [Window][Camera Option]
-Pos=1254,383
-Size=496,374
+Pos=49,148
+Size=358,281
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][PointLight]
-Pos=1254,120
-Size=496,261
+Pos=1360,30
+Size=432,180
 Collapsed=0
-DockId=0x00000008,1
+DockId=0x00000007,1
 
 [Window][DirectionalLight]
-Pos=1254,120
-Size=496,261
+Pos=1360,30
+Size=432,180
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000007,0
 
 [Window][Quaternion]
 Pos=-109,412
@@ -62,16 +62,38 @@ Size=514,263
 Collapsed=0
 
 [Window][Fog]
-Pos=1254,120
-Size=496,261
+Pos=1360,30
+Size=432,180
 Collapsed=0
-DockId=0x00000008,3
+DockId=0x00000007,4
+
+[Window][Model]
+Pos=1360,212
+Size=432,178
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][CircleShadow]
+Pos=1360,30
+Size=432,180
+Collapsed=0
+DockId=0x00000007,3
+
+[Window][Main]
+Pos=49,78
+Size=358,68
+Collapsed=0
+DockId=0x00000006,0
 
 [Docking][Data]
 DockNode    ID=0x00000001 Pos=604,281 Size=418,284 Split=X
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=181,253 Selected=0x3FC1CF52
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=235,253 Selected=0x44A6A033
-DockNode    ID=0x00000005 Pos=1254,120 Size=496,637 Split=Y
-  DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=595,264 Selected=0xC08551AB
-  DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=595,378 Selected=0xD793C64C
+DockNode    ID=0x00000004 Pos=49,78 Size=358,351 Split=Y
+  DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=579,68 Selected=0x5B0000FE
+  DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=579,281 Selected=0xD793C64C
+DockNode    ID=0x00000005 Pos=1360,30 Size=432,360 Split=Y Selected=0xC08551AB
+  DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=432,180 Selected=0xC08551AB
+  DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=432,178 Selected=0x139FF6FE
+DockNode    ID=0x0000000B Pos=1371,498 Size=419,389 Selected=0x7FDF5256
 
