デバッグモードで実行可能になった

--- a/External/DirectXTex/DirectXTex_Desktop_2022_Win10.vcxproj
+++ b/External/DirectXTex/DirectXTex_Desktop_2022_Win10.vcxproj
@@ -211,7 +211,7 @@
     <ClCompile>
       <WarningLevel>EnableAllWarnings</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <OpenMPSupport>true</OpenMPSupport>
       <FloatingPointModel>Fast</FloatingPointModel>
       <AdditionalOptions>/Zc:twoPhase- /Zc:__cplusplus %(AdditionalOptions)</AdditionalOptions>
