--- a/imgui.ini
+++ b/imgui.ini
@@ -85,6 +85,11 @@ Size=358,79
 Collapsed=0
 DockId=0x00000006,0
 
+[Window][CircleGaugeSprite]
+Pos=16,80
+Size=283,187
+Collapsed=0
+
 [Docking][Data]
 DockNode    ID=0x00000001 Pos=604,281 Size=418,284 Split=X
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=181,253 Selected=0x3FC1CF52
